<resources>
    <string name="app_name">ArquitecturaMVPBase</string>
    <string name="product_name">Nombre</string>
    <string name="product_description">Descripción</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="loading_message">Cargando...</string>
    <string name="create_button">Crear</string>
    <string name="okResponseCreateProduct">Producto Creado Correctamente</string>
    <string name="errResponseCreateProduct">Error Creando el Producto</string>

    <string name="text_description">Descripción</string>
    <string name="text_name">Nombre</string>
    <string name="text_price">Precio</string>
    <string name="text_quantity">Cantidad</string>
    <string name="text_button">Crear producto</string>

    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="validate_internet">Error de conectividad</string>
    <string name="correct">Se ha eliminado correctamente</string>
    <string name="error_delete_product">Ha ocurrido un error eliminando el producto</string>
    <string name="deleteProduct">Producto eliminado</string>
    <string name="error">Error</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="text_email">Email</string>
    <string name="text_pass">Clave</string>
    <string name="login_button">Ingresar</string>
    <string name="user">\@AndresEscobar</string>
    <string name="text_surname">Apellido</string>
    <string name="text_number_phone">Telefono</string>
    <string name="text_descripcion_phone">Tipo telefono</string>
    <string name="text_location_type_phone">Tipo localización</string>
    <string name="text_location_coordinates_phone">Coordenadas</string>
    <string name="okResponseCreateCustomer">Cliente Creado Correctamente</string>
    <string name="errResponseCreateCustomer">Error Creando el cliente</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_location">Es necesario tener permisos de acceso a tu ubicación</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

</resources>
